--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build: .
     command: >
       sh -c "python manage.py migrate
+             python manage.py runapscheduler &
              python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
@@ -26,5 +27,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - ALPHA_KEY={$ALPHA_KEY}
+      - START_HOUR=10
+      - END_HOUR=17
     depends_on:
       - db
